connect seller authentication to backend